--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,5 +1,7 @@
 @import "bootstrap/scss/bootstrap";
 @import "bootstrap-icons/font/bootstrap-icons";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 @media (max-width: 991.98px) {
   /* Adjust for smaller screens (bootstrap lg breakpoint) */
