--- a/app/views/sub_accounts/_account.html.erb
+++ b/app/views/sub_accounts/_account.html.erb
@@ -1,4 +1,4 @@
-<div class="card mb-4 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-height: 200px; max-width: 280px;" 
+<div class="card mb-4 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-height: 200px; min-width: 280px;" 
      <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
        onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
      <% end %>>
