--- a/app/views/sub_accounts/show.html.erb
+++ b/app/views/sub_accounts/show.html.erb
@@ -4,11 +4,11 @@
 </div>
 
 <!-- Account Card -->
-<div class="d-flex justify-content-center mb-4">
+<div class="d-flex justify-content-center">
   <%= render partial: "sub_accounts/extended_account", locals: { sub_account: @sub_account, main_account: @selected_main_account } %>
 </div>
 
 <!-- Transactions -->
-<div class="mt-4">
+<div class="mt-2">
   <%= render partial: 'sub_account_transactions/transactions', locals: { transactions: @sub_account.sub_account_transactions, main_account: @selected_main_account, title: "Transactions for '#{@sub_account.title}'", sub_account: @sub_account } %>
 </div>
