--- a/app/views/main_accounts/_owner_card.html.erb
+++ b/app/views/main_accounts/_owner_card.html.erb
@@ -1,16 +1,16 @@
 <div class="card mb-2" style="min-width: 5rem; max-width: 6rem;">
-  <div class="card-body p-2">
-    <h6 class="card-title mb-1 d-flex align-items-center">
-      <i class="fa fa-user me-2"></i>
+  <div class="card-body p-1">
+    <h6 class="card-title mb-1 d-flex align-items-center" style="font-size: 0.9rem;">
+      <i class="fa fa-user me-1"></i>
       <% if owner == current_user %>
         You
       <% else %>
-        <%= owner.full_name %>
+        <%= owner.full_name.truncate(10) %>
       <% end %>
     </h6>
-    <p class="card-text mb-0 d-flex align-items-center">
-      <i class="fa fa-exchange-alt me-2"></i>
-        <%= main_account.main_transactions.where(creator_id: owner.id).count + main_account.sub_accounts.joins(:sub_account_transactions).where(sub_account_transactions: { creator_id: owner.id }).count %>
+    <p class="card-text mb-0 d-flex align-items-center" style="font-size: 0.8rem;">
+      <i class="fa fa-exchange-alt me-1"></i>
+      <%= main_account.main_transactions.where(creator_id: owner.id).count + main_account.sub_accounts.joins(:sub_account_transactions).where(sub_account_transactions: { creator_id: owner.id }).count %>
     </p>
   </div>
 </div>
