--- a/app/views/sub_account_transactions/_transactions.html.erb
+++ b/app/views/sub_account_transactions/_transactions.html.erb
@@ -11,8 +11,6 @@
         <th>Title</th>
         <th>Amount</th>
         <th>Account</th>
-        <th>Creator</th>
-        <th>Action</th>
       </tr>
     </thead>
     <tbody>
@@ -20,12 +18,12 @@
         <tr>
           <!-- Date -->
           <td>
-            <span class="text-muted"><%= l(transaction.created_at, format: :short) %></span>
+            <span class="text-muted"><%= l(transaction.created_at.to_date, format: :short) %></span>
           </td>
 
           <!-- Title -->
           <td>
-            <%= link_to transaction.title, 
+            <%= link_to transaction.title.truncate(10), 
                         main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
                         class: "fw-bold text-decoration-none" %>
           </td>
@@ -39,52 +37,56 @@
           
           <!-- Account -->
           <td>
+            <% account_title = transaction.sub_account.title.truncate(10) %>
             <% if !current_page?(main_account_sub_account_path(transaction.sub_account.main_account, transaction.sub_account)) %>
-              <%= link_to transaction.sub_account.title, main_account_sub_account_path(transaction.sub_account.main_account, transaction.sub_account), class: "fw-bold text-decoration-none" %>
+              <%= link_to account_title, main_account_sub_account_path(transaction.sub_account.main_account, transaction.sub_account), class: "fw-bold text-decoration-none" %>
             <% else %>
-              <span class="fw-bold"><%= transaction.sub_account.title %></span>
+              <span class="fw-bold"><%= account_title %></span>
             <% end %>
-          </td>
-
-          <!-- Creator -->
-          <td>
-            <span class="text-muted"><%= transaction.creator.full_name %></span>
           </td>
 
           <!-- Actions -->
           <td>
-            <!-- Repeat Transaction with Edit -->
-            <%= link_to new_sub_account_transaction_without_subaccount_path(
-                          sub_account_transaction: { 
-                            sub_account_id: transaction.sub_account.id,
-                            title: transaction.title, 
-                            amount: transaction.amount, 
-                            transaction_kind: transaction.transaction_kind,
-                            category_id: transaction.category_id
-                          }
-                        ), 
-                        class: "text-decoration-none" do %>
-              <i class="fas fa-redo-alt text-primary" title="Repeat Transaction with Edit"></i>
-            <% end %>
-
-  <!-- Repeat Transaction without Edit -->
-  <%= link_to repeat_without_edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
-              data: { turbo_method: :post }, 
-              class: "text-decoration-none" do %>
-    <i class="fas fa-clone text-success" title="Repeat Transaction without Edit"></i>
-  <% end %>
-
-            <!-- Edit Transaction -->
-            <%= link_to edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), class: "text-decoration-none" do %>
-              <i class="fas fa-edit text-warning" title="Edit Transaction"></i>
-            <% end %>
-
-            <!-- Delete Transaction -->
-            <%= link_to main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
-                        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this transaction?" }, 
-                        class: "text-decoration-none" do %>
-              <i class="fas fa-trash-alt text-danger" title="Delete Transaction"></i>
-            <% end %>
+            <div class="btn-group">
+              <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-cog"></i>
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <%= link_to new_sub_account_transaction_without_subaccount_path(
+                                sub_account_transaction: { 
+                                  sub_account_id: transaction.sub_account.id,
+                                  title: transaction.title, 
+                                  amount: transaction.amount, 
+                                  transaction_kind: transaction.transaction_kind,
+                                  category_id: transaction.category_id
+                                }
+                              ), 
+                              class: "dropdown-item" do %>
+                    <i class="fas fa-redo-alt text-primary" title="Repeat Transaction with Edit"></i> New
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to repeat_without_edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
+                              data: { turbo_method: :post }, 
+                              class: "dropdown-item" do %>
+                    <i class="fas fa-clone text-success" title="Repeat Transaction without Edit"></i> Duplicate
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to edit_main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), class: "dropdown-item" do %>
+                    <i class="fas fa-edit text-warning" title="Edit Transaction"></i> Edit
+                  <% end %>
+                </li>
+                <li>
+                  <%= link_to main_account_sub_account_sub_account_transaction_path(transaction.sub_account.main_account, transaction.sub_account, transaction), 
+                              data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this transaction?" }, 
+                              class: "dropdown-item text-danger" do %>
+                    <i class="fas fa-trash-alt text-danger" title="Delete Transaction"></i> Delete
+                  <% end %>
+                </li>
+              </ul>
+            </div>
           </td>
         </tr>
       <% end %>
