--- a/app/views/sub_accounts/_account.html.erb
+++ b/app/views/sub_accounts/_account.html.erb
@@ -1,11 +1,11 @@
-<div class="card mb-1 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-height: 100px; min-width: 140px;" 
+<div class="card mb-1 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> max-height: 130px; min-width: 140px;" 
      <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
        onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
      <% end %>>
   <div class="card-body p-2">
     <div class="d-flex justify-content-between align-items-center">
       <h5 class="card-title mb-0">
-        <%= sub_account.title %>
+        <%= sub_account.title.truncate(14) %>
       </h5>
     </div>
     <hr class="my-1">
@@ -25,7 +25,7 @@
       </p>
     </div>
     <p class="card-text mb-1">
-      <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %> Transactions
+      <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %>
     </p>
   </div>
 </div>
