--- a/app/views/sub_accounts/_extended_account.html.erb
+++ b/app/views/sub_accounts/_extended_account.html.erb
@@ -1,40 +1,48 @@
-<div class="card mb-4 shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-height: 200px; min-width: 400px; padding: 0;" 
+<div class="card shadow-sm" style="<%= 'cursor: pointer;' unless current_page?(main_account_sub_account_path(main_account, sub_account)) %> min-width: 400px; padding: 0;" 
      <% unless current_page?(main_account_sub_account_path(main_account, sub_account)) %>
        onclick="window.location='<%= main_account_sub_account_path(main_account, sub_account) %>';"
      <% end %>>
-  <div class="card-body p-0">
-    <div class="d-flex justify-content-between align-items-center p-3">
-      <h4 class="card-title mb-0">
-        <%= sub_account.title %>
-      </h4>
-      <div class="btn-group">
-        <%= link_to new_sub_account_transaction_without_subaccount_path(sub_account_transaction: { sub_account_id: sub_account.id }), class: "btn btn-success btn-sm" do %>
-          <i class="fas fa-plus"></i>
-        <% end %>
-        <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <i class="fas fa-cog"></i>
-        </button>
-        <ul class="dropdown-menu">
-          <li>
-            <%= link_to main_account_sub_account_categories_path(main_account, sub_account), class: "dropdown-item" do %>
-              <i class="fas fa-tags"></i> Categories
-            <% end %>
-          </li>
-          <li>
-            <%= link_to edit_main_account_sub_account_path(main_account, sub_account), class: "dropdown-item" do %>
-              <i class="fas fa-edit"></i> Edit
-            <% end %>
-          </li>
-          <li>
-            <%= link_to main_account_sub_account_path(main_account, sub_account),
-                        data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Account?" },
-                        class: "dropdown-item text-danger" do %>
-              <i class="fas fa-trash-alt"></i> Delete
-            <% end %>
-          </li>
-        </ul>
-      </div>
+
+<div class="card-body p-0">
+  <div class="d-flex justify-content-between align-items-center p-3">
+    <div class="d-flex align-items-center">
+      <h5 class="card-title mb-0 me-3"><%= sub_account.title.truncate(20) %></h5>
+      <p class="mb-0 me-3"><i class="fas fa-percentage"></i> <%= sub_account.percentage %></p>
+      <p class="card-text mb-0 me-3">
+        <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %>
+      </p>
     </div>
+    <div class="btn-group">
+      <%= link_to new_sub_account_transaction_without_subaccount_path(sub_account_transaction: { sub_account_id: sub_account.id }), class: "btn btn-success btn-sm" do %>
+        <i class="fas fa-plus"></i>
+      <% end %>
+      <button type="button" class="btn btn-secondary btn-sm dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="fas fa-cog"></i>
+      </button>
+      <ul class="dropdown-menu">
+        <li>
+          <%= link_to main_account_sub_account_categories_path(main_account, sub_account), class: "dropdown-item" do %>
+            <i class="fas fa-tags"></i> Categories
+          <% end %>
+        </li>
+        <li>
+          <%= link_to edit_main_account_sub_account_path(main_account, sub_account), class: "dropdown-item" do %>
+            <i class="fas fa-edit"></i> Edit
+          <% end %>
+        </li>
+        <li>
+          <%= link_to main_account_sub_account_path(main_account, sub_account),
+                      data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to delete this Account?" },
+                      class: "dropdown-item text-danger" do %>
+            <i class="fas fa-trash-alt"></i> Delete
+          <% end %>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
     <hr class="m-0">
     <div class="p-3">
 
@@ -50,23 +58,15 @@
           <%= number_to_currency(total_spent, unit: main_account.currency) %>
         </p>
       </div>
-
-      <p class="card-text">
-        <i class="fas fa-receipt"></i> <%= sub_account.sub_account_transactions.count %> Transactions
-      </p>
-
-      <p class="card-text">
-        <i class="fas fa-percentage"></i> <%= sub_account.percentage %>%
-      </p>
       
       <!-- Categories -->
-      <div class="mb-4">
+      Categories:
         <% sub_account.categories.each do |category| %>
           <%= link_to main_account_sub_account_category_path(main_account, sub_account, category), class: "badge bg-info text-decoration-none me-2" do %>
             <%= category.title %>
           <% end %>
         <% end %>
-      </div>
+ 
 
       <% if sub_account.description.present? %>
         <p class="card-text text-muted small">
